# MusicAnalyzer

./: .gitignore  CMakeLists.txt
include/: analyzer.h
src/: analyzer.cpp  main.cpp
